// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./antdv-demo/docs/modal/demo/async.md correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Open Modal with async logic</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./antdv-demo/docs/modal/demo/basic.md correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Open Modal</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./antdv-demo/docs/modal/demo/button-props.md correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Open Modal with customized button props</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./antdv-demo/docs/modal/demo/confirm.md correctly 1`] = `
<div><button class="ant-btn" type="button">
    <!----><span>Confirm</span>
  </button><button class="ant-btn ant-btn-dashed" type="button">
    <!----><span>Delete</span>
  </button><button class="ant-btn ant-btn-dashed" type="button">
    <!----><span>With extra props</span>
  </button></div>
`;

exports[`renders ./antdv-demo/docs/modal/demo/confirm-promise.md correctly 1`] = `
<button class="ant-btn" type="button">
  <!----><span>Confirm</span>
</button>
`;

exports[`renders ./antdv-demo/docs/modal/demo/confirm-router.md correctly 1`] = `
<button class="ant-btn" type="button">
  <!----><span>Confirm</span>
</button>
`;

exports[`renders ./antdv-demo/docs/modal/demo/footer.md correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Open Modal with customized footer</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./antdv-demo/docs/modal/demo/info.md correctly 1`] = `
<div><button class="ant-btn" type="button">
    <!----><span>Info</span>
  </button><button class="ant-btn" type="button">
    <!----><span>Success</span>
  </button><button class="ant-btn" type="button">
    <!----><span>Error</span>
  </button><button class="ant-btn" type="button">
    <!----><span>Warning</span>
  </button></div>
`;

exports[`renders ./antdv-demo/docs/modal/demo/locale.md correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Modal</span>
  </button>
  <!----><br><br><button class="ant-btn" type="button">
    <!----><span>Confirm</span>
  </button>
</div>
`;

exports[`renders ./antdv-demo/docs/modal/demo/manual.md correctly 1`] = `
<button class="ant-btn" type="button">
  <!----><span>Open modal to close in 5s</span>
</button>
`;

exports[`renders ./antdv-demo/docs/modal/demo/position.md correctly 1`] = `
<div id="components-modal-demo-position"><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Display a modal dialog at 20px to Top</span>
  </button>
  <!----><br><br><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Vertically centered modal dialog</span>
  </button>
  <!---->
</div>
`;
